[package]
name = "glass"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
clap = { version = "4.5.34", features = ["derive"] }
fast_image_resize = { version = "5.1.2", features = ["rayon", "image"] }
image = "0.25.6"
ravif = "0.11.11"
rgb = "0.8.50"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
debug = true

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
